🪟 🐛 Fix intercom/modal z-index conflict (#7351)

--- a/airbyte-webapp/src/components/ui/Modal/Modal.module.scss
+++ b/airbyte-webapp/src/components/ui/Modal/Modal.module.scss
@@ -25,6 +25,10 @@
   justify-content: center;
   align-items: center;
   margin-left: variables.$width-size-menu;
+
+  &--noSidebarOffset {
+    margin-left: 0;
+  }
 }
 
 .modalPanel {
