--- a/airbyte-webapp/src/scss/_z-indices.scss
+++ b/airbyte-webapp/src/scss/_z-indices.scss
@@ -1,13 +1,15 @@
+$intercom: 2147483001; // Liable to change if intercom updates their CSS
+
 $base: 0;
 $bulkEdit: 1000;
-$tooltip: 9999 + 4;
-$notification: 9999 + 3;
-$datepicker: 9999 + 2;
+$tooltip: $intercom + 4;
+$notification: $intercom + 3;
+$datepicker: $intercom + 2;
 $mainPageWithScrollEdge: 1;
-$modal: 9999 + 1;
+$modal: $intercom + 1;
 $overlay: 2;
 $pageHeader: 2;
-$sidebar: 9999;
+$sidebar: $intercom;
 $schemaChangesBackdropContent: 4;
 $schemaChangesBackdrop: 3;
 $dropdownMenu: 2;
